# nodeos-cloudbuild

./: .build_everything.sh.swp  .gcloudignore  .gitignore  .scratch  Dockerfile-bos-full  Dockerfile-bos-prod  Dockerfile-build-env  Dockerfile-cdt  Dockerfile-cdt-slim  Dockerfile-eos-full  Dockerfile-eos-prod  Dockerfile-eosio-buildenv  Dockerfile-nodeos-buildenv  Dockerfile-nodeos-full  Dockerfile-nodeos-prod  Dockerfile-wasmsdk  Dockerfile-wax-full  README.md  bos-dm.cb.yaml  bos-vanilla.cb.yaml  build_everything.sh  cloudbuild-bos-bare.yaml  cloudbuild-bos-deepmind.yaml  cloudbuild-bos-dm.yaml  cloudbuild-bos-vanilla.yaml  cloudbuild-bos.yaml  cloudbuild-build-env.yaml  cloudbuild-cdt-slim.yaml  cloudbuild-cdt.yaml  cloudbuild-contracts.yaml  cloudbuild-eos-bare.yaml  cloudbuild-eos-dm.yaml  cloudbuild-eos-vanilla.yaml  cloudbuild-eosio-buildenv.yaml  cloudbuild-eosio-cdt.yaml  cloudbuild-nodeos-buildenv.yaml  cloudbuild-nodeos-deepmind.yaml  cloudbuild-nodeos-full.yaml  cloudbuild-nodeos-prod.yaml  cloudbuild-nodeos.yaml  (+42 more)
deep-mind/: README.md  apply.sh  deep-mind-logging.patch  deep-mind.patch  eos-deep-mind.patch  run_tests.sh
deep-mind/battlefield/: .gitignore  CMakeLists.txt  INSTRUCTIONS.md  README.md  battlefield-with-handler.abi  battlefield-with-handler.wasm  battlefield-without-handler.abi  battlefield-without-handler.wasm  battlefield.abi  battlefield.wasm  build.sh  clean.sh  run.sh
deep-mind/battlefield/abi/: battlefield.abi
deep-mind/battlefield/include/: battlefield.hpp
deep-mind/battlefield/src/: battlefield.cpp
patches/: bos-deep-mind-logging-v2.0.3-v10.0.patch  bos-deep-mind-v2.0.3-v10.0.patch  bos-deep-mind-v2.0.3-v9.1.patch  cpu_fix.patch  (+33 more)
(+33 files in other folders)
